parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@subscript.py-10.snap
---
source: parser/src/parser/parser.rs
description: "a[::d,]\n"
input_file: parser/test_data/inputs/one_liners/subscript.py
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        ExpressionStatement(
            Subscript(
                Subscript {
                    node: Node {
                        start: 0,
                        end: 7,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    slice: Slice(
                        Slice {
                            node: Node {
                                start: 2,
                                end: 5,
                            },
                            lower: None,
                            upper: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 4,
                                            end: 5,
                                        },
                                        id: "d",
                                    },
                                ),
                            ),
                            step: None,
                        },
                    ),
                },
            ),
        ),
    ],
}
