parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@subscript.py-8.snap
---
source: parser/src/parser/parser.rs
description: "a[::]"
input_file: parser/test_data/inputs/one_liners/subscript.py
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        ExpressionStatement(
            Subscript(
                Subscript {
                    node: Node {
                        start: 0,
                        end: 5,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    slice: Slice(
                        Slice {
                            node: Node {
                                start: 2,
                                end: 4,
                            },
                            lower: None,
                            upper: None,
                            step: None,
                        },
                    ),
                },
            ),
        ),
    ],
}
