parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_assignment-14.snap
---
source: parser/src/parser/parser.rs
description: "a = 1, 2, "
---
Module {
    node: Node {
        start: 0,
        end: 9,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 9,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                ],
                value: Tuple(
                    Tuple {
                        node: Node {
                            start: 4,
                            end: 9,
                        },
                        elements: [
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 4,
                                        end: 5,
                                    },
                                    value: Int(
                                        "1",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 7,
                                        end: 8,
                                    },
                                    value: Int(
                                        "2",
                                    ),
                                },
                            ),
                        ],
                    },
                ),
            },
        ),
    ],
}
